--- a/wp-content/themes/guny/style.css
+++ b/wp-content/themes/guny/style.css
@@ -714,7 +714,7 @@ ol.o-inline {
   color: rgba(51, 51, 51, 0.7);
   font-size: 0.75rem;
   padding-bottom: 2.1875rem; }
-  @media screen and (min-width: 375px) {
+  @media screen and (min-width: 1024px) {
     .c-content-tout {
       font-size: 1rem; } }
 
@@ -725,7 +725,8 @@ ol.o-inline {
 .c-content-tout__heading {
   color: rgba(51, 51, 51, 0.5);
   font-size: 0.8125rem;
-  letter-spacing: 0.03125rem;
+  letter-spacing: .5px;
+  line-height: 1;
   text-transform: uppercase; }
   @media screen and (min-width: 375px) {
     .c-content-tout__heading {
@@ -764,7 +765,7 @@ ol.o-inline {
   font-weight: 900;
   letter-spacing: 0.0275rem;
   line-height: 1.2; }
-  @media screen and (min-width: 375px) {
+  @media screen and (min-width: 1024px) {
     .c-content-tout__item__title {
       font-size: 1.3125rem; } }
   .c-content-tout__item__title:hover, .c-content-tout__item__title:focus {
@@ -944,28 +945,6 @@ ol.o-inline {
     background: #0055b8; }
 
 /* No files to import found in scopes//* */
-/**
-* Utility classes
-*/
-/**
-* Wordpress image alignment
-*/
-.alignright {
-  float: none; }
-  @media screen and (min-width: 1024px) {
-    .alignright {
-      float: right; } }
-
-.alignleft {
-  float: none; }
-  @media screen and (min-width: 1024px) {
-    .alignleft {
-      float: left; } }
-
-.aligncenter {
-  max-width: 100%;
-  margin: 0 auto; }
-
 .baby-background {
   background: #d8006d !important; }
 
@@ -995,6 +974,31 @@ ol.o-inline {
 
 .pre-teen-text {
   color: #0055b8; }
+
+/**
+* Utility classes
+*/
+.nowrap {
+  white-space: nowrap; }
+
+/**
+* Wordpress image alignment
+*/
+.alignright {
+  float: none; }
+  @media screen and (min-width: 1024px) {
+    .alignright {
+      float: right; } }
+
+.alignleft {
+  float: none; }
+  @media screen and (min-width: 1024px) {
+    .alignleft {
+      float: left; } }
+
+.aligncenter {
+  max-width: 100%;
+  margin: 0 auto; }
 
 .show-for-screen-reader {
   clip: rect(1px, 1px, 1px, 1px);
